- Fix upgrade issues

--- a/src/Diamante/AutomationBundle/Resources/config/automation.yml
+++ b/src/Diamante/AutomationBundle/Resources/config/automation.yml
@@ -71,13 +71,13 @@ diamante_automation:
 
   actions:
     update_property:
-      id: @diamante_automation.action.update_property
+      id: '@diamante_automation.action.update_property'
       frontend_label: diamante.automation.action.update_property
       frontend_options:
         source: "@diamante.autocomplete.user.service->getAssigners"
       data_types: ['*', '!user', '!users']
     notify_by_email:
-      id: @diamante_automation.action.notify_by_email
+      id: '@diamante_automation.action.notify_by_email'
       frontend_label: diamante.automation.action.notify_by_email
       frontend_options:
         source: "@diamante.autocomplete.user.service->getNotifyActionList"
