- Update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ matrix:
     - php: hhvm
 
 branches:
-  except:
-  - l10n_master
+  only:
+    - master
 
 before_install:
   - mysql -e 'create database diamantedesk;'
