DIAM-1922 Updated syntax for assets.yml
- Updated syntax on assets.yml files
- Commented assets files where extension is *.less

--- a/src/Diamante/AutomationBundle/Resources/config/oro/assets.yml
+++ b/src/Diamante/AutomationBundle/Resources/config/oro/assets.yml
@@ -1,4 +1,3 @@
-assets:
-    css:
-        'diamanteautomation':
-            - 'bundles/diamanteautomation/css/less/main.less'
+css:
+  inputs:
+#    - 'bundles/diamanteautomation/css/less/main.less'
