--- a/src/Diamante/DeskBundle/Resources/config/oro/assets.yml
+++ b/src/Diamante/DeskBundle/Resources/config/oro/assets.yml
@@ -1,5 +1,4 @@
-assets:
-  css:
-    'diamantedesk':
-        - 'bundles/diamantedesk/css/diam.css'
-        - 'bundles/diamantedesk/css/diam.widget.css'
+css:
+  inputs:
+    - 'bundles/diamantedesk/css/diam.css'
+    - 'bundles/diamantedesk/css/diam.widget.css'
