--- a/src/Diamante/DistributionBundle/Resources/config/oro/assets.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/oro/assets.yml
@@ -1,4 +1,3 @@
-assets:
-    css:
-        'diamantedistribution':
-          - 'bundles/diamantedistribution/css/less/main.less'
+css:
+  inputs:
+#    - 'bundles/diamantedistribution/css/less/main.less'
