--- a/src/Diamante/EmailProcessingBundle/Resources/config/oro/assets.yml
+++ b/src/Diamante/EmailProcessingBundle/Resources/config/oro/assets.yml
@@ -1,4 +1,3 @@
-assets:
-  css:
-    'diamanteemailprocessing':
-        - 'bundles/diamanteemailprocessing/css/diam.css'
+css:
+  inputs:
+    - 'bundles/diamanteemailprocessing/css/diam.css'
