--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "bordeux/email-cleaner": "0.6.*",
         "michelf/php-markdown": "~1.8",
         "ramsey/uuid": "~3.8",
-        "jms/job-queue-bundle": "1.4.*"
+        "jms/job-queue-bundle": "1.4.*",
+        "beberlei/assert": "^3.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.1.*",
