Fixed ticket create, ticket update WIP

--- a/src/Diamante/UserBundle/Resources/config/oro/datagrids.yml
+++ b/src/Diamante/UserBundle/Resources/config/oro/datagrids.yml
@@ -13,7 +13,7 @@ datagrids:
           left:
             - { join: u.apiUser, alias: a }
         from:
-          - { table: %diamante.user.entity.class%, alias: u }
+          - { table: '%diamante.user.entity.class%', alias: u }
         where:
           and:
             - u.isDeleted = false
