--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,8 @@
             "@install-requirements-file",
             "@set-permissions",
             "@install-assets",
-            "@set-assets-version"
+            "@set-assets-version",
+            "@diglin-apply-patches"
         ],
         "post-update-cmd": [
             "@build-parameters",
@@ -77,7 +78,8 @@
             "@install-requirements-file",
             "@set-permissions",
             "@install-assets",
-            "@set-assets-version"
+            "@set-assets-version",
+            "@diglin-apply-patches"
         ],
         "build-parameters": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
@@ -96,6 +98,9 @@
         ],
         "set-assets-version": [
             "Oro\\Bundle\\InstallerBundle\\Composer\\ScriptHandler::setAssetsVersion"
+        ],
+        "diglin-apply-patches": [
+            "cat ./patches/symfony/* | patch -p2 --directory=vendor/symfony || true"
         ]
     },
     "minimum-stability": "dev",
