--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "require":{
         "oro/platform": "~3.1.1",
         "oro/platform-serialised-fields": "~3.1.1",
+        "oro/calendar-bundle": "~3.1.1",
         "bordeux/email-cleaner": "0.6.*",
         "michelf/php-markdown": "~1.8",
         "ramsey/uuid": "~3.8",
