DIAM-1967: bug with name file routes.json - Added configuration for routing filename prefix to config.yml

--- a/config/config.yml
+++ b/config/config.yml
@@ -163,3 +163,5 @@ oro_attachment:
         - image/gif
         - image/jpeg
         - image/png
+oro_navigation:
+    js_routing_filename_prefix: 'diamante'
