--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -3,6 +3,8 @@ whitelist:
     - 'oro_config_configuration_system'
     - 'oro_api_get_sidebars'
     - 'oro_api_cget_sidebarwidgets'
+    - 'oro_api_post_sidebarwidgets'
+    - 'oro_email_last'
     - 'oro_default'
     - 'oro_dashboard_itemized_widget'
     - 'oro_activity_list_widget_activities'
