DIAM-1966: DB error when clicking on the arrow to uncover sidebar widget's menu - Added route to whitelist

--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -2,6 +2,7 @@ whitelist:
   simple:
     - 'oro_config_configuration_system'
     - 'oro_api_get_sidebars'
+    - 'oro_api_put_sidebars'
     - 'oro_api_cget_sidebarwidgets'
     - 'oro_api_post_sidebarwidgets'
     - 'oro_email_last'
