DIAM-1960: Database errors in Customers section - Edited configuration in the datagrid.yml - Added new helper service to return query builder for branch filter

--- a/src/Diamante/DeskBundle/Resources/config/oro/datagrids.yml
+++ b/src/Diamante/DeskBundle/Resources/config/oro/datagrids.yml
@@ -231,7 +231,8 @@ datagrids:
                     options:
                         field_options:
                             class: DiamanteDeskBundle:Branch
-                            property_path: name
+                            choice_label: name
+                            query_builder: "@diamante.ticket.datagrid_branch_helper->getBranchFilterQueryBuilder"
                 assigneeFullName:
                     type:      string
                     data_name: assigneeFullName
