[DIAN-1957] - in navigation panel changed "reports" icon

--- a/src/Diamante/DistributionBundle/Resources/config/oro/navigation.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/oro/navigation.yml
@@ -30,7 +30,7 @@ navigation:
         label: 'diamante.desk.report.plural_label'
         uri: '#'
         extras:
-          icon: fa-chart-bar
+          icon: fa-bar-chart
           position: 95
 
       diamante_customer_management:
