--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -32,6 +32,7 @@ whitelist:
     - 'oro_importexport_export_download'
     - 'oro_attachment_file'
     - 'oro_action_widget_buttons'
+    - 'oro_action_operation_execute'
 
     #OroUserBundle
     - 'oro_activity_list_api_get_list'
