--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -5,6 +5,9 @@ whitelist:
     - 'oro_api_put_sidebars'
     - 'oro_api_cget_sidebarwidgets'
     - 'oro_api_post_sidebarwidgets'
+    - 'oro_api_put_sidebarwidgets'
+    - 'oro_api_delete_sidebarwidgets'
+    - 'oro_api_delete_windows'
     - 'oro_email_last'
     - 'oro_default'
     - 'oro_dashboard_itemized_widget'
