DIAM-1974: Unclear 1/0 options for choosing - Changed project yaml configuration to show correct select options for channels and notifications config sections

--- a/src/Diamante/DeskBundle/Resources/config/oro/system_configuration.yml
+++ b/src/Diamante/DeskBundle/Resources/config/oro/system_configuration.yml
@@ -26,8 +26,8 @@ system_configuration:
       options:
         label: 'Enable Email Notifications'
         choices:
-          - No
-          - Yes
+          No: 0
+          Yes: 1
     diamante_desk.default_branch:
       data_type: integer
       type: Diamante\DeskBundle\Form\Type\DefaultBranchType
