--- a/config/config.yml
+++ b/config/config.yml
@@ -107,7 +107,9 @@ liip_imagine:
     loaders:
         default:
             filesystem:
-                data_root: %kernel.project_dir%/public
+                data_root:
+                    - %kernel.project_dir%/public
+                    - %kernel.project_dir%/var/attachments
     resolvers:
         default:
             web_path:
